--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,25 @@
   display: flex;
   width: 100%;
 }
+button {
+  width: 100px;
+}
+#prevBtn {
+  position: absolute;
+  top: 45%;
+  left: 0;
+  z-index: 1;
+}
+#nextBtn {
+  position: absolute;
+  top: 45%;
+  right: 0;
+  z-index: 1;
+}
 
 .slide {
-  flex: 0 0 100%;
-  height: 300px;
+  /* flex-shrink, flex-grow, flex-basis */
+  flex: 0 0 100%; /*flex-basis 100% prai elementot da zafati 100% od dadeniot prostor*/
+  height: 600px;
   background-size: cover;
 }
